--- a/src/themes/mytheme/_variables.scss
+++ b/src/themes/mytheme/_variables.scss
@@ -31,7 +31,7 @@ $shade300: #dfe7ef !default; //border, divider
 $shade400: #d3dbe3 !default; //input border
 $shade500: #c6ccd7 !default; //input icon
 $shade600: #708da9 !default; //text secondary color
-$shade700: #39362e !default; //text color
+$shade700: #4f575d !default; //text color
 $shade800: #343a40 !default; //unused
 $shade900: #212529 !default; //unused
 
